--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,8 @@
   --font-signika: "Signika", sans-serif;
   --font-roboto: "Roboto", sans-serif;
   --font-playfair: var(--font-playfair);
+  --font-montserrat: var(--font-montserrat);
+  --font-archivo: var(--font-archivo);
   --color-sidebar-ring: var(--sidebar-ring);
   --color-sidebar-border: var(--sidebar-border);
   --color-sidebar-accent-foreground: var(--sidebar-accent-foreground);
